# timet-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: pipeline.yml
src/: cli.rs  main.rs
