[package]
name = "timet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
attohttpc = { version = "0.22.0", default-features = false, features = ["json", "compress", "tls-rustls"] }
clap = { version = "4.5.0", features = ["derive", "cargo", "env"] }
clap_complete = "4.5.0"
colored = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", default-features = false, features = ["std"] }
