[package]
name = "timet-rs"
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "Automate your Timet fetching"
documentation = "https://github.com/sondr3/timet-rs"
homepage = "https://github.com/sondr3/timet-rs"
repository = "https://github.com/sondr3/timet-rs"
license = "WTFPL"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
attohttpc = { version = "0.27.0", default-features = false, features = ["json", "compress", "tls-rustls"] }
clap = { version = "4.5.0", features = ["derive", "cargo", "env"] }
clap_complete = "4.5.0"
colored = "2.1.0"
etcetera = "0.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", default-features = false, features = ["std"] }

[build-dependencies]
clap = { version = "4.0.7", features = ["derive", "cargo"] }
clap_complete = "4.0.2"
clap_mangen = "0.2.2"
